<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="add_category">Add category</string>
    <string name="add_sound">Add sound(s)</string>
    <string name="app_name" translatable="false">Söun̈dböard 2</string>
    <string name="ascending">Ascending</string>
    <string name="auto_delete_missing">Auto delete missing</string>
    <string name="background_colour">Background colour</string>
    <string name="backup">Backup</string>
    <string name="backup_archive_created">Backup archive created.</string>
    <string name="backup_text">Back up your app settings, database contents, and optionally all sounds, to a ZIP file:</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_add_sounds">You cannot add sounds when you have enabled <b>Watch folder</b> and <b>Auto delete missing</b> in the settings.</string>
    <string name="cannot_delete_last_category">You cannot delete the last category.</string>
    <string name="category">Category</string>
    <string name="category_for_new_sounds">Category for new sounds</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="collapse_expand">Collapse/expand</string>
    <string name="creation_time">Creation time</string>
    <string name="delete">Delete</string>
    <string name="delete_category">Delete category?</string>
    <string name="delete_category_name">Delete category %1$s?</string>
    <string name="delete_orphans">Delete orphans</string>
    <string name="descending">Descending</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="edit_category">Edit category</string>
    <string name="edit_sound">Edit sound</string>
    <string name="enable_animations">Enable animations</string>
    <string name="include_sounds">Include sounds</string>
    <string name="move_down">Move down</string>
    <string name="move_to_another_category">Move to another category</string>
    <string name="move_to_category">Move to category</string>
    <string name="move_up">Move up</string>
    <string name="multiple_sounds_selected" tools:ignore="PluralsCandidate">(%1$d sounds selected)</string>
    <string name="name">Name</string>
    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="no">No</string>
    <string name="no_change">No change</string>
    <string name="no_file_chosen">No file chosen!</string>
    <string name="not_changed">(Not changed)</string>
    <string name="not_set">(Not set)</string>
    <string name="ok">OK</string>
    <string name="overlap">Overlap</string>
    <string name="override_category_background_colour">Override background colour</string>
    <string name="pause">Pause</string>
    <string name="redid">Redid!</string>
    <string name="redo">Redo</string>
    <string name="repress_mode">Re-press mode</string>
    <string name="restart">Restart</string>
    <string name="restore">Restore</string>
    <string name="restore_text">Restore a previously backed up ZIP file:</string>
    <string name="restoring_file">Restoring file:</string>
    <string name="save">Save</string>
    <string name="saving_file">Saving file:</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="select_background_colour">Select background colour</string>
    <string name="select_folder">Select folder</string>
    <string name="selected_sounds">Selected: %1$d/%2$d</string>
    <string name="settings">Sëttings</string>
    <string name="share">Share</string>
    <string name="share_with">Share with …</string>
    <string name="sort_sounds_by">Sort sounds by</string>
    <string name="stop">Stop</string>
    <string name="stop_all">Stop all</string>
    <string name="undid">Undid!</string>
    <string name="undo">Undo</string>
    <string name="volume">Volume</string>
    <string name="watch_folder">Watch folder</string>
    <string name="watch_folder_category_text">If not set, or invalid, sounds will be placed in the first category.</string>
    <string name="watch_folder_checking">Checking for updates in watched folder …</string>
    <string name="watch_folder_text">If set, the app will scan this folder for audio files on every startup, and add any new ones.</string>
    <string name="watch_folder_trash_missing_text">If checked, the app will not only copy new files from the watched folder, but also delete those that are missing.</string>
    <string name="watched_folder_sync">Watched folder sync</string>
    <string name="yes">Yes</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_level_percent">Zoom level: %1$d%%</string>
    <string name="zoom_out">Zoom out</string>
    <plurals name="add_duplicate">
        <item quantity="one">Add duplicate</item>
        <item quantity="other">Add duplicates</item>
    </plurals>
    <plurals name="add_sounds">
        <item quantity="one">Add sound</item>
        <item quantity="other">Add sounds</item>
    </plurals>
    <plurals name="add_sound_counts">
        <item quantity="one">Will add one sound and skip %2$d.</item>
        <item quantity="other">Will add %1$d sounds and skip %2$d.</item>
    </plurals>
    <plurals name="category_contains_sounds">
        <item quantity="one">This category contains one sound. What do you want to do with it?</item>
        <item quantity="other">This category contains %1$d sounds. What do you want to do with them?</item>
    </plurals>
    <plurals name="delete_sounds">
        <item quantity="one">Delete sound?</item>
        <item quantity="other">Delete sounds?</item>
    </plurals>
    <plurals name="delete_sounds_confirm">
        <item quantity="one">Do you want to delete &lt;b>%2$s&lt;/b>?</item>
        <item quantity="other">Do you want to delete the %1$d selected sounds?</item>
    </plurals>
    <plurals name="deleted_orphan_files">
        <item quantity="one">Deleted one orphan file from internal storage.</item>
        <item quantity="other">Deleted %1$d orphan files from internal storage.</item>
    </plurals>
    <plurals name="deleted_orphan_sounds">
        <item quantity="zero">No orphan sounds were found.</item>
        <item quantity="one">Deleted one orphan sound.</item>
        <item quantity="other">Deleted %1$d orphan sounds.</item>
    </plurals>
    <plurals name="edit_sounds">
        <item quantity="one">Edit sound</item>
        <item quantity="other">Edit sounds</item>
    </plurals>
    <plurals name="sound_already_exists">
        <item quantity="one">&lt;b>%2$s&lt;/b> already exists in the database. Do you want to add a duplicate of it?</item>
        <item quantity="other">%1$d of the selected sounds already exist in the database. Do you want to add duplicates of them?</item>
    </plurals>
    <plurals name="restored_settings_database_sounds">
        <item quantity="one">Restored settings, database, and one sound.</item>
        <item quantity="other">Restored settings, database, and %1$d sounds.</item>
    </plurals>
    <plurals name="restored_settings_sounds">
        <item quantity="one">Restored settings and one sound.</item>
        <item quantity="other">Restored settings and %1$d sounds.</item>
    </plurals>
    <plurals name="restored_database_sounds">
        <item quantity="one">Restored database and one sound.</item>
        <item quantity="other">Restored database and %1$d sounds.</item>
    </plurals>
    <plurals name="restored_sounds">
        <item quantity="one">Restored one sound.</item>
        <item quantity="other">Restored %1$d sounds.</item>
    </plurals>
    <plurals name="sounds_automatically_added">
        <item quantity="one">The following sound was automatically added to the %1$s category:</item>
        <item quantity="other">The following sounds were automatically added to the %1$s category:</item>
    </plurals>
    <plurals name="sounds_automatically_deleted">
        <item quantity="one">The following sound was automatically deleted:</item>
        <item quantity="other">The following sounds were automatically deleted:</item>
    </plurals>
</resources>