<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionStopAll"
        android:icon="@drawable/icon_ban"
        android:orderInCategory="1"
        android:title="@string/stop_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionRepressMode"
        android:icon="@drawable/repress_mode_icon_with_down_caret"
        android:orderInCategory="2"
        android:title="@string/repress_mode"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:checkable="false"
                    android:enabled="false"
                    android:title="@string/repress_mode" />
                <item
                    android:id="@+id/actionRepressModeStop"
                    android:icon="@drawable/icon_stop"
                    android:title="@string/stop" />
                <item
                    android:id="@+id/actionRepressModeRestart"
                    android:icon="@drawable/icon_play"
                    android:title="@string/restart" />
                <item
                    android:id="@+id/actionRepressModeOverlap"
                    android:icon="@drawable/icon_clone"
                    android:title="@string/overlap" />
                <item
                    android:id="@+id/actionRepressModePause"
                    android:icon="@drawable/icon_pause"
                    android:title="@string/pause" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/icon_magnifying_glass"
        android:orderInCategory="3"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/actionOverflowMenu"
        android:icon="@drawable/icon_ellipsis_vertical"
        android:orderInCategory="4"
        android:title=""
        app:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/actionAddSound"
                    android:icon="@drawable/icon_plus"
                    android:title="@string/add_sound" />
                <item
                    android:id="@+id/actionAddCategory"
                    android:icon="@drawable/icon_folder_plus"
                    android:title="@string/add_category" />
            </group>

            <group>
                <item
                    android:id="@+id/actionZoomIn"
                    android:icon="@drawable/icon_magnifying_glass_plus"
                    android:title="@string/zoom_in" />
                <item
                    android:id="@+id/actionZoomOut"
                    android:icon="@drawable/icon_magnifying_glass_minus"
                    android:title="@string/zoom_out" />
            </group>

            <group>
                <item
                    android:id="@+id/actionUndo"
                    android:icon="@drawable/icon_rotate_left"
                    android:title="@string/undo" />
                <item
                    android:id="@+id/actionRedo"
                    android:icon="@drawable/icon_rotate_right"
                    android:title="@string/redo" />
            </group>

            <item
                android:id="@+id/actionDeleteOrphans"
                android:icon="@drawable/icon_baby"
                android:title="@string/delete_orphans" />

            <item
                android:id="@+id/actionSettings"
                android:icon="@drawable/icon_gear"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>