<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="us.huseli.soundboard2.viewmodels.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/action_bar_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/animationsSection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionBar">

            <us.huseli.fontawesome.FontAwesomeTextView
                android:id="@+id/animationsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="40sp"
                android:text="@string/fas_person_running"
                android:textColor="?attr/menuIconColor"
                android:textSize="@dimen/text_h2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/animationsEnabled"
                style="@style/Style.Soundboard.TextView.H2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.animationsEnabled}"
                android:text="@string/enable_animations"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/animationsIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:switchMinWidth="50dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/watchFolderSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animationsSection">

            <us.huseli.fontawesome.FontAwesomeTextView
                android:id="@+id/watchFolderIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="40sp"
                android:text="@string/fas_folder"
                android:textColor="?attr/menuIconColor"
                android:textSize="@dimen/text_h2"
                app:layout_constraintBottom_toBottomOf="@+id/watchFolderLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/watchFolderLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/watch_folder"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_h2"
                app:layout_constraintStart_toEndOf="@+id/watchFolderIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/watchFolderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/watch_folder_text"
                android:layout_marginVertical="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/watchFolderLabel"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderLabel" />

            <EditText
                android:id="@+id/watchFolderString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_normal"
                android:enabled="false"
                android:text="@{viewModel.watchFolderString}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/watchFolderLabel"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderText"
                tools:ignore="Autofill,LabelFor,TextFields,TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/watchFolderSelectButton"
                android:text="@string/select_folder"
                android:layout_marginVertical="@dimen/margin_normal"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderString"
                app:layout_constraintStart_toStartOf="@+id/watchFolderLabel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/watchFolderClearButton"
                style="@style/Style.Soundboard.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_watch"
                android:layout_marginVertical="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderString" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/watchFolderCategoryLabel"
                android:text="@string/category_for_new_sounds"
                android:textSize="@dimen/text_h3"
                android:layout_marginVertical="@dimen/margin_normal"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderSelectButton"
                app:layout_constraintStart_toStartOf="@+id/watchFolderLabel" />

            <TextView
                android:id="@+id/watchFolderCategoryText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/watch_folder_category_text"
                android:layout_marginVertical="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="@+id/watchFolderLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderCategoryLabel" />

            <Spinner
                android:id="@+id/watchFolderCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_normal"
                android:minHeight="48dp"
                android:selectedItemPosition="@{viewModel.watchFolderCategoryPosition}"
                android:contentDescription="@{viewModel.watchFolderCategoryName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/watchFolderLabel"
                app:layout_constraintTop_toBottomOf="@+id/watchFolderCategoryText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Style.Soundboard.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>